--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,15 @@
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>PageObject</name>
+  <name>PageObject2</name>
   <url>http://maven.apache.org</url>
 
  
- <properties>
+<!--  <properties>
    
         <suiteFile>TestChrome.xml</suiteFile>
     </properties>
-
+ -->
  
 
 
